# reed-tpse

./: .gitignore  CMakeLists.txt  DEVICE_REFERENCE.md  IMPROVEMENT-reed-tpse.md  README.md
build-eval/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  reed-tpse  reed-tpse-gui
build-eval/.qt/: QtDeploySupport.cmake  QtDeployTargets.cmake
cli/: main.cpp
gui/: main.cpp
include/reed/: adb.hpp  config.hpp  device.hpp  panel.hpp
packaging/: reed-tpse-gui.desktop
src/: adb.cpp  config.cpp
